--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-altair==5.2.0
+altair==5.3.0
+apache-airflow==2.8.4
 beautifulsoup4==4.12.3
 duckdb==0.9.2
 google_api_python_client==2.48.0
@@ -7,6 +8,7 @@ nba_api==1.4.1
 numpy==1.24.3
 pandas==2.0.3
 plotly==5.9.0
+protobuf==5.26.1
 python_dateutil==2.8.2
 Requests==2.31.0
 st_theme==1.2.2
