--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 altair==5.3.0
-apache-airflow==2.8.4
-beautifulsoup4==4.12.3
+apache-airflow==2.9.0
+beautifulsoup4==4.10.0
 duckdb==0.9.2
 google_api_python_client==2.48.0
 Google_Images_Search==1.4.6
+google-cloud-storage>=1.42.0
 nba_api==1.4.1
 numpy==1.24.3
 pandas==2.0.3
 plotly==5.9.0
-protobuf==4.25.3
+protobuf==3.12.4
 python_dateutil==2.8.2
+python_dateutil==2.8.1
 Requests==2.31.0
 st_theme==1.2.2
 streamlit==1.32.0
