--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altair==5.3.0
 asttokens==2.4.1
 attrs==23.2.0
 Babel==2.10.3
-bcc==0.29.1
+#bcc==0.31.0
 bcrypt==3.2.2
 blinker==1.7.0
 Brlapi==0.8.5
