--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Babel==2.10.3
 bcc==0.1.7
 bcrypt==3.2.2
 blinker==1.7.0
-Brlapi==0.8.5
+#Brlapi==0.8.5
 cachetools==5.3.3
 certifi==2023.11.17
 chardet==5.2.0
