--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cachetools==5.3.3
 certifi==2023.11.17
 chardet==5.2.0
 click==8.1.6
-cloud-init==24.1.3
+#cloud-init==24.1.3
 colorama==0.4.6
 comm==0.2.2
 command-not-found==0.3
