--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ click==8.1.6
 #cloud-init==24.1.3
 colorama==0.4.6
 comm==0.2.2
-command-not-found==0.3
+#command-not-found==0.3
 configobj==5.0.8
 cryptography==41.0.7
 cupshelpers==1.0
